fixed some more z-index issues

--- a/frontend/src/assets/styles/cmps/_board-container.scss
+++ b/frontend/src/assets/styles/cmps/_board-container.scss
@@ -2,6 +2,8 @@
 	width: 100%;
 	height: 100vh;
 	overflow: auto;
+	display: flex;
+	flex-direction: column;
 
 	&::-webkit-scrollbar {
 		width: 10px;
