--- a/frontend/src/assets/styles/cmps/dynamic-task-cmps/_timeline-picker.scss
+++ b/frontend/src/assets/styles/cmps/dynamic-task-cmps/_timeline-picker.scss
@@ -15,7 +15,7 @@
 	}
 
 	.timeline-popup-container {
-		z-index: 30;
+		z-index: 1200;
 	}
 
 	.timeline-container {
