--- a/frontend/src/assets/styles/cmps/group-summary-cmps/_member-summary.scss
+++ b/frontend/src/assets/styles/cmps/group-summary-cmps/_member-summary.scss
@@ -21,8 +21,9 @@
 			border-radius: 50%;
 			min-width: 30px;
 			min-height: 30px;
-			width: 30px;
-			height: 30px;
+			max-width: 30px;
+			max-height: 30px;
+			border: 2px solid white;
 			&:not(:last-child) {
 				margin-inline-end: -6px;
 			}
